refactored code, included css in js for easier usage

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <title>.</title>
-    <link rel="stylesheet" type="text/css" href="ilovecookies.css" />
     <script type="text/javascript" src="ilovecookies.js"></script>
 </head>
 <body>
