refactored code, included css in js for easier usage

--- a/index.html
+++ b/index.html
@@ -3,7 +3,28 @@
 <head>
     <meta charset="utf-8" />
     <title>.</title>
-    <script type="text/javascript" src="ilovecookies.js"></script>
+    <script src="ilovecookies.js"></script>
+    <script>
+    document.addEventListener('DOMContentLoaded', function()
+    {
+        var ilovecookies = new iLoveCookies({
+            expiration: 30,
+            css: true,
+            de: {
+                text: 'Um die Webseite optimal gestalten und fortlaufend verbessern zu können, verwenden wir Cookies. Durch die weitere Nutzung der Webseite stimmen Sie der Verwendung von Cookies zu.',
+                close_text: 'Schließen',
+                more_text: 'Weitere Informationen',
+                more_link: 'datenschutz'
+            },
+            en: {
+                text: 'To ensure that our web site is well managed and to facilitate improved navigation within the site, we may use cookies. By using this website, you agree to the use of cookies.',
+                close_text: 'Close',
+                more_text: 'Further information',
+                more_link: function() { alert('foo'); }
+            }
+        });
+    });
+    </script>
 </head>
 <body>
 </body>
