--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>.</title>
-    <script src="ilovecookies.js"></script>
+    <script src="ilovecookies.min.js"></script>
     <script>
     document.addEventListener('DOMContentLoaded', function()
     {
